# ascii_image

./: .gitignore  Cargo.toml  README.md
src/: ascii_img_builder.rs  ascii_img_impl.rs  lib.rs
tests/: ascii_image_creation.rs  gen_image.rs  gen_text.rs  gen_text_grayscale.rs  test.rs
tests/data/results_text/: cactus_grayscale.txt  diamond_sword_grayscale.txt  every_blackwhite.txt  every_blackwhite_256.txt  every_blackwhite_double_density.txt  rust_icon.txt  transparent_something.txt  transparent_something_grayscale_no_alpha.txt
