[package]
name = "image_ascii"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library to transform images into ASCII art. Both into text and images consisting of letters."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
